@@ -111,11 +111,17 @@ SN.Lang.Debuff.Soul:SetGerman("Seelenernte")
 SN.Lang.Debuff.Soul:SetRussian("Сбор души")
 SN.Lang.Debuff.Soul:SetFrench("Récolte d'âme")
 SN.Lang.Debuff.Ravaged = KBM.Language:Add("Ravaged Soul")
+SN.Lang.Debuff.Ravaged:SetGerman("Verwüstete Seele")
+SN.Lang.Debuff.Ravaged:SetFrench("Âme ravagée")
 
 -- MechSpy Dictionary
 SN.Lang.MechSpy = {}
 SN.Lang.MechSpy.Buff = KBM.Language:Add("Buffed: Unholy Contract")
+SN.Lang.MechSpy.Buff:SetGerman("Buffed: Unheiliger Vertrag")
+SN.Lang.MechSpy.Buff:SetFrench("Buffed: Contrat impie")
 SN.Lang.MechSpy.Debuff = KBM.Language:Add("Debuffed: Unholy Contract")
+SN.Lang.MechSpy.Debuff:SetGerman("Debuffed: Unheiliger Vertrag")
+SN.Lang.MechSpy.Debuff:SetFrench("Débuffed: Contrat impie")
 
 function SN:AddBosses(KBM_Boss)
 	self.MenuName = self.Descript
@@ -293,8 +299,10 @@ function SN:Start()
 	KBM.Defaults.AlertObj.Assign(self.Sicaron)
 	
 	-- Create Mechanic Spies
-	self.Sicaron.MechRef.Buff = KBM.MechSpy:Add(self.Lang.MechSpy.Buff[KBM.Lang], nil, "mechanic", self.Sicaron)
-	self.Sicaron.MechRef.Debuff = KBM.MechSpy:Add(self.Lang.MechSpy.Debuff[KBM.Lang], nil, "mechanic", self.Sicaron)
+	self.Sicaron.MechRef.Buff = KBM.MechSpy:Add(self.Lang.MechSpy.Buff[KBM.Lang], 12, "mechanic", self.Sicaron)
+	self.Sicaron.MechRef.Debuff = KBM.MechSpy:Add(self.Lang.MechSpy.Debuff[KBM.Lang], 5, "mechanic", self.Sicaron)
+	self.Sicaron.MechRef.Debuff:NoMenu()
+	self.Sicaron.MechRef.Buff:SpyAfter(self.Sicaron.MechRef.Debuff)
 	self.Sicaron.MechRef.Soul = KBM.MechSpy:Add(self.Lang.Debuff.Ravaged[KBM.Lang], nil, "debuff", self.Sicaron)
 	KBM.Defaults.MechObj.Assign(self.Sicaron)
 	
@@ -302,13 +310,11 @@ function SN:Start()
 	self.Sicaron.Triggers.Contract = KBM.Trigger:Create(self.Lang.Notify.Contract[KBM.Lang], "notify", self.Sicaron)
 	self.Sicaron.Triggers.Contract:AddTimer(self.Sicaron.TimersRef.Contract)
 	self.Sicaron.Triggers.Contract:AddAlert(self.Sicaron.AlertsRef.Contract, true)
+	self.Sicaron.Triggers.Contract:AddSpy(self.Sicaron.MechRef.Buff)
 	self.Sicaron.AlertsRef.Contract:Important()
 	self.Sicaron.AlertsRef.ContractRed:Important()
 	self.Sicaron.AlertsRef.Contract:AlertEnd(self.Sicaron.AlertsRef.ContractRed)
-	self.Sicaron.Triggers.ContractBuff = KBM.Trigger:Create(self.Lang.Debuff.Contract[KBM.Lang], "playerBuff", self.Sicaron)
-	self.Sicaron.Triggers.ContractBuff:AddSpy(self.Sicaron.MechRef.Buff)
-	self.Sicaron.Triggers.ContractDebuff = KBM.Trigger:Create(self.Lang.Debuff.Contract[KBM.Lang], "playerDebuff", self.Sicaron)
-	self.Sicaron.Triggers.ContractDebuff:AddSpy(self.Sicaron.MechRef.Debuff)
+--	self.Sicaron.Triggers.ContractDebuff:AddSpy(self.Sicaron.MechRef.Debuff)
 	self.Sicaron.Triggers.Ravaged = KBM.Trigger:Create(self.Lang.Debuff.Ravaged[KBM.Lang], "playerDebuff", self.Sicaron)
 	self.Sicaron.Triggers.Ravaged:AddSpy(self.Sicaron.MechRef.Soul)
 	self.Sicaron.Triggers.Hex = KBM.Trigger:Create(self.Lang.Ability.Hex[KBM.Lang], "cast", self.Sicaron)
