@@ -242,15 +242,23 @@ function KBMLM.SetMain_Lang()
 	-- MechSpy Options
 	KBM.Language.MechSpy = {}
 	KBM.Language.MechSpy.Name = KBM.Language:Add("Mechanic Spy")
+	KBM.Language.MechSpy.Name:SetGerman("Mechanik Spion")
+	KBM.Language.MechSpy.Name:SetFrench("Espion de Mécanisme")
 	KBM.Language.MechSpy.Enabled = KBM.Language:Add("Mechanic Spy Enabled")
+	KBM.Language.MechSpy.Enabled:SetGerman("Mechanik Spion anzeigen")
+	KBM.Language.MechSpy.Enabled:SetFrench("Espion de Mécanisme Activé")
 	KBM.Language.MechSpy.Show = KBM.Language:Add("Always show Mechanic Headers")
+	KBM.Language.MechSpy.Show:SetGerman("Mechanik Spion Kopfzeilen immer zeigen")
+	KBM.Language.MechSpy.Show:SetFrench("Toujours montrer En-tête Mécanisme")
 	KBM.Language.MechSpy.Override = KBM.Language:Add("Mechanic Spy: Override")
+	KBM.Language.MechSpy.Override:SetGerman("separate Mechanik Spion Einstellungen")
+	KBM.Language.MechSpy.Override:SetFrench("Espion de Mécanisme: Substituer")
 	
 	-- Timer Options
 	KBM.Language.Options.MechTimerOverride = KBM.Language:Add("Mechanic Timers: Override")
-	KBM.Language.Options.MechTimerOverride:SetGerman("separate Einstellungen")
+	KBM.Language.Options.MechTimerOverride:SetGerman("separate Mechanik Timer Einstellungen")
 	KBM.Language.Options.MechTimerOverride:SetRussian("Таймеры механики: Переопределить")
-	KBM.Language.Options.MechTimerOverride:SetFrench("Timers de Mécanisme: Override")
+	KBM.Language.Options.MechTimerOverride:SetFrench("Timers de Mécanisme: Substituer")
 	KBM.Language.Options.EncTimerOverride = KBM.Language:Add("Encounter Timer: Override")
 	KBM.Language.Options.EncTimerOverride:SetGerman("separate Boss Timer: Einstellungen")
 	KBM.Language.Options.EncTimerOverride:SetRussian("Таймер боя: Переопределить")
@@ -260,11 +268,11 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Options.EncTimers:SetRussian("Таймеры боя разрешены")
 	KBM.Language.Options.EncTimers:SetFrench("Timers combat activé")
 	KBM.Language.Options.MechanicTimers = KBM.Language:Add("Mechanic Timers enabled")
-	KBM.Language.Options.MechanicTimers:SetFrench("Timers de M\195\169canisme")
+	KBM.Language.Options.MechanicTimers:SetFrench("Timers de Mécanisme")
 	KBM.Language.Options.MechanicTimers:SetGerman("Mechanik Timer")
 	KBM.Language.Options.MechanicTimers:SetRussian("Таймеры механики разрешены")
 	KBM.Language.Options.TimersEnabled = KBM.Language:Add("Timers enabled")
-	KBM.Language.Options.TimersEnabled:SetFrench("Timers activ\195\169")
+	KBM.Language.Options.TimersEnabled:SetFrench("Timers activé")
 	KBM.Language.Options.TimersEnabled:SetGerman("Timer anzeigen")
 	KBM.Language.Options.TimersEnabled:SetRussian("Таймер разрешен")
 	KBM.Language.Options.ShowTimer = KBM.Language:Add("Show Timer (for positioning)")
@@ -346,7 +354,7 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Options.Button:SetGerman("Options-Schalter sichtbar")
 	KBM.Language.Options.Button:SetRussian("Отображать кнопку настроек")
 	KBM.Language.Options.LockButton = KBM.Language:Add("Unlock Button (right-click to move)")
-	KBM.Language.Options.LockButton:SetFrench("D\195\169bloquer Bouton (click-droit pour d\195\169placer)")
+	KBM.Language.Options.LockButton:SetFrench("Débloquer Bouton (click-droit pour déplacer)")
 	KBM.Language.Options.LockButton:SetGerman("Schalter ist verschiebbar (Rechts-Klick zum verschieben)")
 	KBM.Language.Options.LockButton:SetRussian("Разблокировать кнопку (правый клик для перемещения)")
 
@@ -371,19 +379,19 @@ function KBMLM.SetMain_Lang()
 	KBM.Language.Options.AlertsOverride:SetRussian("Предупреждения: Переопределить")
 	KBM.Language.Options.Alert = KBM.Language:Add("Screen Alerts")
 	KBM.Language.Options.Alert:SetGerman("Alarmierungen")
-	KBM.Language.Options.Alert:SetFrench("Alerte \195\160 l'\195\169cran")
+	KBM.Language.Options.Alert:SetFrench("Alerte à l'écran")
 	KBM.Language.Options.Alert:SetRussian("Предупреждения на экране")
 	KBM.Language.Options.AlertsEnabled = KBM.Language:Add("Screen Alerts enabled")
 	KBM.Language.Options.AlertsEnabled:SetGerman("Alarmierungen aktiviert")
-	KBM.Language.Options.AlertsEnabled:SetFrench("Alerte \195\160 l'\195\169cran activ\195\169")
+	KBM.Language.Options.AlertsEnabled:SetFrench("Alerte à l'écran activé")
 	KBM.Language.Options.AlertsEnabled:SetRussian("Отображать предупреждения на экране")
 	KBM.Language.Options.AlertFlash = KBM.Language:Add("Screen flash enabled")
 	KBM.Language.Options.AlertFlash:SetGerman("Bildschirm-Rand Flackern aktiviert")
-	KBM.Language.Options.AlertFlash:SetFrench("Flash \195\169cran activ\195\169")
+	KBM.Language.Options.AlertFlash:SetFrench("Flash écran activé")
 	KBM.Language.Options.AlertFlash:SetRussian("Мигание экрана разрешено")
 	KBM.Language.Options.AlertText = KBM.Language:Add("Alert warning text enabled")
 	KBM.Language.Options.AlertText:SetGerman("Alarmierungs-Text aktiviert")
-	KBM.Language.Options.AlertText:SetFrench("Texte Avertissement Alerte activ\195\169")
+	KBM.Language.Options.AlertText:SetFrench("Texte Avertissement Alerte activé")
 	KBM.Language.Options.AlertText:SetRussian("Текст предупреждения разрешен")
 	KBM.Language.Options.UnlockFlash = KBM.Language:Add("Unlock alert border for scaling")
 	KBM.Language.Options.UnlockFlash:SetGerman("Alarmierungs Ränder sind änderbar.")
